# AI-Guest-Response-Agent

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/properties/: properties.json
data/reservations/: reservations.json
data/templates/: response_templates.jsonl
data/test_cases/: test_cases.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md
evaluation/: runner.py
evaluation/judges/: __init__.py  accuracy.py  base.py  relevance.py  safety.py
evaluation/reports/: generator.py
frontend/: index.html
infrastructure/prometheus/: prometheus.yml
scripts/: analyze_llm_calls.py  evaluate_response_quality.py  fetch_langsmith.py  fetch_prometheus.py  generate_api_key.py  generate_synthetic_data.py  migrate_json_to_postgres.py  run_evaluation.py  run_tests.py  setup.sh  setup_qdrant.py  test_features.sh  verify_implementation.py  verify_setup.py
src/: main.py
src/agent/: graph.py  nodes.py  prompts.py  state.py
src/api/: middleware.py  schemas.py
src/auth/: __init__.py  api_key.py  dependencies.py
src/config/: settings.py
src/data/: cache.py  cache_factory.py  cache_redis.py  models.py  repositories.py
src/database/: __init__.py  connection.py  models.py  repositories.py
src/guardrails/: pii_redaction.py  topic_filter.py
src/monitoring/: cost.py  langsmith.py  logging.py  metrics.py
src/retrieval/: embeddings.py  qdrant_client.py
src/tools/: property_details.py  reservation_details.py  template_retrieval.py  template_substitution.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  test_api.py
tests/integration/: __init__.py  test_agent_workflow.py  test_guardrails.py
tests/load/: README.md  locustfile.py
tests/unit/: test_cache.py  test_models.py  test_tools.py  (+1 more)
(+7 files in other folders)
